--- a/lib_aatools/src/main/res/values/strings.xml
+++ b/lib_aatools/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">lib_aatools</string>
-    <string name="accessibility_service_description">开启功能, 追踪栈顶View</string>
+    <string name="accessibility_service_description">开启 "AATools" 的辅助功能</string>
 </resources>
